# pyXclTodoManager

./: README.md  pyproject.toml
src/pyXclTodoManager/: appWindows.py  baseIncludes.py  remind.py  task_workbook.py  trace.py
